# resume-magic-writer

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/resume_magic_writer/: crew.py  main.py
src/resume_magic_writer/api/: main.py  routes.py  schemas.py
src/resume_magic_writer/config/: agents.yaml  tasks.yaml
src/resume_magic_writer/models/: __init__.py  job_models.py  output_models.py  resume_models.py
src/resume_magic_writer/tools/: __init__.py  ats_optimizer.py  job_analyzer.py  resume_parser.py
static/: index.html
static/css/: colors.css  floating-labels.css  gradients.css  main.css  preview-modal.css  resume.css
static/js/: api-client.js  app.js  floating-labels.js  form-handler.js  preview-modal.js
